added init migration and updated database

--- a/src/MusicCommunityApp/appsettings.json
+++ b/src/MusicCommunityApp/appsettings.json
@@ -1,10 +1,5 @@
-﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+{
+    "DbContextSettings": {
+        "ConnectionString": "User ID=patrickb;Password=Havon3tt;Host=localhost;Port=5432;Database=MusicCommunity;Pooling=true;"
     }
-  }
 }
