--- a/src/MusicCommunityApp/project.json
+++ b/src/MusicCommunityApp/project.json
@@ -21,8 +21,10 @@
         "Microsoft.Extensions.Logging.Debug": "1.0.0",
         "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
         "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
-        "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.0",
+        // "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.0",
         "Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final"
+
+
 
 
     },
