set up for sql server

--- a/src/MusicCommunityApp/appsettings.json
+++ b/src/MusicCommunityApp/appsettings.json
@@ -1,5 +1,7 @@
 {
-    "DbContextSettings": {
-        "ConnectionString": "User ID=patrickb;Password=Havon3tt;Host=localhost;Port=5432;Database=MusicCommunity;Pooling=true;"
+  "Data": {
+    "MusicCommunity": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicCommunity;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
+  }
 }
