--- a/src/MusicCommunityApp/appsettings.json
+++ b/src/MusicCommunityApp/appsettings.json
@@ -1,7 +1,10 @@
 {
   "Data": {
     "MusicCommunity": {
-      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicCommunity;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicCommunity;Trusted_Connection=True;MultipleActiveResultSets=true;",
+      //"ConnectionString": "Server=tcp:musiccommunityapp1dbserver.database.windows.net,1433;Initial Catalog=MusicCommunityDB;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
   }
 }
+
+
