chapter 12 up to the seed data

--- a/src/MusicCommunityApp/appsettings.Development.json
+++ b/src/MusicCommunityApp/appsettings.Development.json
@@ -2,8 +2,9 @@
   "Data": {
     "MusicCommunity": {
       "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicCommunity;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    },
+    "MusicIdentity": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
-
-
