--- a/src/MusicCommunityApp/project.json
+++ b/src/MusicCommunityApp/project.json
@@ -23,7 +23,8 @@
     },
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
-    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
 
   },
 
@@ -61,7 +62,6 @@
       "include": [
         "wwwroot",
         "**/*.cshtml",
-        //"appsettings.json",
         "appsettings.production.json",
         "web.config"
       ]
