registration and login

--- a/src/MusicCommunityApp/appsettings.Development.json
+++ b/src/MusicCommunityApp/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
   "Data": {
     "MusicCommunity": {
-      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicCommunity;Trusted_Connection=True;MultipleActiveResultSets=true;",
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicCommunity;Trusted_Connection=True;MultipleActiveResultSets=true;"
     },
     "MusicIdentity": {
       "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MusicIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
