--- a/src/MusicCommunityApp/appsettings.Production.json
+++ b/src/MusicCommunityApp/appsettings.Production.json
@@ -1,7 +1,10 @@
 ﻿{
   "Data": {
     "MusicCommunity": {
-      "ConnectionString": "Server=tcp:musiccommunityapp1dbserver.database.windows.net,1433;Initial Catalog=MusicCommunityDB;Persist Security Info=False;User ID=Administration@musiccommunityapp1dbserver;Password=Fancy123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Server=tcp:lab9.database.windows.net,1433;Initial Catalog=MusicAuthLabDB;Persist Security Info=False;User ID=useradmin;Password=Havon3tt;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    },
+    "MusicIdentity": {
+      "ConnectionString":"Server=tcp:musiccommunityidentity.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=useradmin;Password=Havon3tt;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
   }
 }
